@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2005-03-14
+ChangeLog - 2005-03-15
 
 
 Version 0.1.1 (under dev!):
+   * added nicks count for channel buffers
    * added FIFO pipe for remote control
    * added crash dump when WeeChat receives SIGSEGV (Segmentation fault)
    * added new display engine: doesn't cut words at end of lines
